rtamt/parser/stl/python2/StlParser.py
# Generated from StlParser.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class StlParser ( Parser ):

    grammarFileName = "StlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'-'", u"'+'", u"'*'", u"'/'", u"'('", 
                     u"')'", u"'{'", u"'}'", u"'['", u"']'", u"';'", u"':'", 
                     u"','", u"'.'", u"'@'", u"'abs'", u"'s'", u"'ms'", 
                     u"'us'", u"'ns'", u"'ps'", u"'topic'", u"'import'", 
                     u"'input'", u"'output'", u"'internal'", u"'const'", 
                     u"'real'", u"'float'", u"'long'", u"'complex'", u"'int'", 
                     u"'bool'", u"'assertion'", u"'specification'", u"'from'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'xor'", u"'rise'", u"'fall'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'oracle'", u"<INVALID>", 
                     u"'=='", u"'!=='", u"'>='", u"'<='", u"'>'", u"'<'", 
                     u"'='" ]

    symbolicNames = [ u"<INVALID>", u"MINUS", u"PLUS", u"TIMES", u"DIVIDE", 
                      u"LPAREN", u"RPAREN", u"LBRACE", u"RBRACE", u"LBRACK", 
                      u"RBRACK", u"SEMICOLON", u"COLON", u"COMMA", u"DOT", 
                      u"AT", u"ABS", u"SEC", u"MSEC", u"USEC", u"NSEC", 
                      u"PSEC", u"ROS_Topic", u"Import", u"Input", u"Output", 
                      u"Internal", u"Constant", u"DomainTypeReal", u"DomainTypeFloat", 
                      u"DomainTypeLong", u"DomainTypeComplex", u"DomainTypeInt", 
                      u"DomainTypeBool", u"Assertion", u"Specification", 
                      u"From", u"NotOperator", u"OrOperator", u"AndOperator", 
                      u"IffOperator", u"ImpliesOperator", u"XorOperator", 
                      u"RiseOperator", u"FallOperator", u"AlwaysOperator", 
                      u"EventuallyOperator", u"UntilOperator", u"HistoricallyOperator", 
                      u"OnceOperator", u"SinceOperator", u"NextOperator", 
                      u"OracleOperator", u"PreviousOperator", u"EqualOperator", 
                      u"NotEqualOperator", u"GreaterOrEqualOperator", u"LesserOrEqualOperator", 
                      u"GreaterOperator", u"LesserOperator", u"EQUAL", u"BooleanLiteral", 
                      u"TRUE", u"FALSE", u"IntegerLiteral", u"RealLiteral", 
                      u"Identifier", u"LINE_TERMINATOR", u"WHITESPACE", 
                      u"COMMENT", u"LINE_COMMENT" ]

    RULE_stlfile = 0
    RULE_stlSpecification = 1
    RULE_spec = 2
    RULE_modimport = 3
    RULE_assertion = 4
    RULE_declaration = 5
    RULE_annotation = 6
    RULE_annotation_type = 7
    RULE_variableDeclaration = 8
    RULE_assignment = 9
    RULE_domainType = 10
    RULE_ioType = 11
    RULE_interval = 12
    RULE_intervalTime = 13
    RULE_unit = 14
    RULE_topExpression = 15
    RULE_expression = 16
    RULE_real_expression = 17
    RULE_comparisonOp = 18
    RULE_literal = 19
    RULE_identifier = 20

    ruleNames =  [ u"stlfile", u"stlSpecification", u"spec", u"modimport", 
                   u"assertion", u"declaration", u"annotation", u"annotation_type", 
                   u"variableDeclaration", u"assignment", u"domainType", 
                   u"ioType", u"interval", u"intervalTime", u"unit", u"topExpression", 
                   u"expression", u"real_expression", u"comparisonOp", u"literal", 
                   u"identifier" ]

    EOF = Token.EOF
    MINUS=1
    PLUS=2
    TIMES=3
    DIVIDE=4
    LPAREN=5
    RPAREN=6
    LBRACE=7
    RBRACE=8
    LBRACK=9
    RBRACK=10
    SEMICOLON=11
    COLON=12
    COMMA=13
    DOT=14
    AT=15
    ABS=16
    SEC=17
    MSEC=18
    USEC=19
    NSEC=20
    PSEC=21
    ROS_Topic=22
    Import=23
    Input=24
    Output=25
    Internal=26
    Constant=27
    DomainTypeReal=28
    DomainTypeFloat=29
    DomainTypeLong=30
    DomainTypeComplex=31
    DomainTypeInt=32
    DomainTypeBool=33
    Assertion=34
    Specification=35
    From=36
    NotOperator=37
    OrOperator=38
    AndOperator=39
    IffOperator=40
    ImpliesOperator=41
    XorOperator=42
    RiseOperator=43
    FallOperator=44
    AlwaysOperator=45
    EventuallyOperator=46
    UntilOperator=47
    HistoricallyOperator=48
    OnceOperator=49
    SinceOperator=50
    NextOperator=51
    OracleOperator=52
    PreviousOperator=53
    EqualOperator=54
    NotEqualOperator=55
    GreaterOrEqualOperator=56
    LesserOrEqualOperator=57
    GreaterOperator=58
    LesserOperator=59
    EQUAL=60
    BooleanLiteral=61
    TRUE=62
    FALSE=63
    IntegerLiteral=64
    RealLiteral=65
    Identifier=66
    LINE_TERMINATOR=67
    WHITESPACE=68
    COMMENT=69
    LINE_COMMENT=70

    def __init__(self, input):
        super(StlParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StlfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.StlfileContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stlSpecification(self):
            return self.getTypedRuleContext(StlParser.StlSpecificationContext,0)


        def EOF(self):
            return self.getToken(StlParser.EOF, 0)

        def getRuleIndex(self):
            return StlParser.RULE_stlfile

        def accept(self, visitor):
            if hasattr(visitor, "visitStlfile"):
                return visitor.visitStlfile(self)
            else:
                return visitor.visitChildren(self)




    def stlfile(self):

        localctx = StlParser.StlfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stlfile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.stlSpecification()
            self.state = 43
            self.match(StlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StlSpecificationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.StlSpecificationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assertion(self):
            return self.getTypedRuleContext(StlParser.AssertionContext,0)


        def spec(self):
            return self.getTypedRuleContext(StlParser.SpecContext,0)


        def modimport(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlParser.ModimportContext)
            else:
                return self.getTypedRuleContext(StlParser.ModimportContext,i)


        def declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(StlParser.DeclarationContext,i)


        def annotation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(StlParser.AnnotationContext,i)


        def getRuleIndex(self):
            return StlParser.RULE_stlSpecification

        def accept(self, visitor):
            if hasattr(visitor, "visitStlSpecification"):
                return visitor.visitStlSpecification(self)
            else:
                return visitor.visitChildren(self)




    def stlSpecification(self):

        localctx = StlParser.StlSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stlSpecification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if _la==StlParser.Specification:
                self.state = 45
                self.spec()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==StlParser.From:
                self.state = 48
                self.modimport()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    token = self._input.LA(1)
                    if token in [StlParser.Input, StlParser.Output, StlParser.Constant, StlParser.DomainTypeFloat, StlParser.DomainTypeLong, StlParser.DomainTypeComplex, StlParser.DomainTypeInt, StlParser.Identifier]:
                        self.state = 54
                        self.declaration()

                    elif token in [StlParser.AT]:
                        self.state = 55
                        self.annotation()

                    else:
                        raise NoViableAltException(self)
             
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 61
            self.assertion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.SpecContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_spec

     
        def copyFrom(self, ctx):
            super(StlParser.SpecContext, self).copyFrom(ctx)



    class SpecificationContext(SpecContext):

        def __init__(self, parser, ctx): # actually a StlParser.SpecContext)
            super(StlParser.SpecificationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def Specification(self):
            return self.getToken(StlParser.Specification, 0)
        def Identifier(self):
            return self.getToken(StlParser.Identifier, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitSpecification"):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)



    def spec(self):

        localctx = StlParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spec)
        try:
            localctx = StlParser.SpecificationContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(StlParser.Specification)
            self.state = 64
            self.match(StlParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModimportContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.ModimportContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_modimport

     
        def copyFrom(self, ctx):
            super(StlParser.ModimportContext, self).copyFrom(ctx)



    class ModImportContext(ModimportContext):

        def __init__(self, parser, ctx): # actually a StlParser.ModimportContext)
            super(StlParser.ModImportContext, self).__init__(parser)
            self.copyFrom(ctx)

        def From(self):
            return self.getToken(StlParser.From, 0)
        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(StlParser.Identifier)
            else:
                return self.getToken(StlParser.Identifier, i)
        def Import(self):
            return self.getToken(StlParser.Import, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitModImport"):
                return visitor.visitModImport(self)
            else:
                return visitor.visitChildren(self)



    def modimport(self):

        localctx = StlParser.ModimportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modimport)
        try:
            localctx = StlParser.ModImportContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(StlParser.From)
            self.state = 67
            self.match(StlParser.Identifier)
            self.state = 68
            self.match(StlParser.Import)
            self.state = 69
            self.match(StlParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssertionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.AssertionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(StlParser.Identifier, 0)

        def EQUAL(self):
            return self.getToken(StlParser.EQUAL, 0)

        def topExpression(self):
            return self.getTypedRuleContext(StlParser.TopExpressionContext,0)


        def getRuleIndex(self):
            return StlParser.RULE_assertion

        def accept(self, visitor):
            if hasattr(visitor, "visitAssertion"):
                return visitor.visitAssertion(self)
            else:
                return visitor.visitChildren(self)




    def assertion(self):

        localctx = StlParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(StlParser.Identifier)
            self.state = 72
            self.match(StlParser.EQUAL)
            self.state = 73
            self.topExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_declaration

     
        def copyFrom(self, ctx):
            super(StlParser.DeclarationContext, self).copyFrom(ctx)



    class DeclVariableContext(DeclarationContext):

        def __init__(self, parser, ctx): # actually a StlParser.DeclarationContext)
            super(StlParser.DeclVariableContext, self).__init__(parser)
            self.copyFrom(ctx)

        def variableDeclaration(self):
            return self.getTypedRuleContext(StlParser.VariableDeclarationContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitDeclVariable"):
                return visitor.visitDeclVariable(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = StlParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            localctx = StlParser.DeclVariableContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.variableDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnnotationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.AnnotationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def annotation_type(self):
            return self.getTypedRuleContext(StlParser.Annotation_typeContext,0)


        def getRuleIndex(self):
            return StlParser.RULE_annotation

        def accept(self, visitor):
            if hasattr(visitor, "visitAnnotation"):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = StlParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(StlParser.AT)
            self.state = 78
            self.annotation_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Annotation_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.Annotation_typeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_annotation_type

     
        def copyFrom(self, ctx):
            super(StlParser.Annotation_typeContext, self).copyFrom(ctx)



    class RosTopicContext(Annotation_typeContext):

        def __init__(self, parser, ctx): # actually a StlParser.Annotation_typeContext)
            super(StlParser.RosTopicContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ROS_Topic(self):
            return self.getToken(StlParser.ROS_Topic, 0)
        def LPAREN(self):
            return self.getToken(StlParser.LPAREN, 0)
        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(StlParser.Identifier)
            else:
                return self.getToken(StlParser.Identifier, i)
        def COMMA(self):
            return self.getToken(StlParser.COMMA, 0)
        def RPAREN(self):
            return self.getToken(StlParser.RPAREN, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitRosTopic"):
                return visitor.visitRosTopic(self)
            else:
                return visitor.visitChildren(self)



    def annotation_type(self):

        localctx = StlParser.Annotation_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_annotation_type)
        try:
            localctx = StlParser.RosTopicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(StlParser.ROS_Topic)
            self.state = 81
            self.match(StlParser.LPAREN)
            self.state = 82
            self.match(StlParser.Identifier)
            self.state = 83
            self.match(StlParser.COMMA)
            self.state = 84
            self.match(StlParser.Identifier)
            self.state = 85
            self.match(StlParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.VariableDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def domainType(self):
            return self.getTypedRuleContext(StlParser.DomainTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(StlParser.IdentifierContext,0)


        def Constant(self):
            return self.getToken(StlParser.Constant, 0)

        def ioType(self):
            return self.getTypedRuleContext(StlParser.IoTypeContext,0)


        def assignment(self):
            return self.getTypedRuleContext(StlParser.AssignmentContext,0)


        def getRuleIndex(self):
            return StlParser.RULE_variableDeclaration

        def accept(self, visitor):
            if hasattr(visitor, "visitVariableDeclaration"):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = StlParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if _la==StlParser.Constant:
                self.state = 87
                self.match(StlParser.Constant)


            self.state = 91
            _la = self._input.LA(1)
            if _la==StlParser.Input or _la==StlParser.Output:
                self.state = 90
                self.ioType()


            self.state = 93
            self.domainType()
            self.state = 94
            self.identifier()
            self.state = 96
            _la = self._input.LA(1)
            if _la==StlParser.EQUAL:
                self.state = 95
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_assignment

     
        def copyFrom(self, ctx):
            super(StlParser.AssignmentContext, self).copyFrom(ctx)



    class AsgnExprContext(AssignmentContext):

        def __init__(self, parser, ctx): # actually a StlParser.AssignmentContext)
            super(StlParser.AsgnExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(StlParser.EQUAL, 0)
        def expression(self):
            return self.getTypedRuleContext(StlParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAsgnExpr"):
                return visitor.visitAsgnExpr(self)
            else:
                return visitor.visitChildren(self)


    class AsgnLiteralContext(AssignmentContext):

        def __init__(self, parser, ctx): # actually a StlParser.AssignmentContext)
            super(StlParser.AsgnLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(StlParser.EQUAL, 0)
        def literal(self):
            return self.getTypedRuleContext(StlParser.LiteralContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAsgnLiteral"):
                return visitor.visitAsgnLiteral(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = StlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.state = 102
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = StlParser.AsgnLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(StlParser.EQUAL)
                self.state = 99
                self.literal()
                pass

            elif la_ == 2:
                localctx = StlParser.AsgnExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(StlParser.EQUAL)
                self.state = 101
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.DomainTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DomainTypeFloat(self):
            return self.getToken(StlParser.DomainTypeFloat, 0)

        def DomainTypeInt(self):
            return self.getToken(StlParser.DomainTypeInt, 0)

        def DomainTypeLong(self):
            return self.getToken(StlParser.DomainTypeLong, 0)

        def DomainTypeComplex(self):
            return self.getToken(StlParser.DomainTypeComplex, 0)

        def Identifier(self):
            return self.getToken(StlParser.Identifier, 0)

        def getRuleIndex(self):
            return StlParser.RULE_domainType

        def accept(self, visitor):
            if hasattr(visitor, "visitDomainType"):
                return visitor.visitDomainType(self)
            else:
                return visitor.visitChildren(self)




    def domainType(self):

        localctx = StlParser.DomainTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_domainType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & ((1 << (StlParser.DomainTypeFloat - 29)) | (1 << (StlParser.DomainTypeLong - 29)) | (1 << (StlParser.DomainTypeComplex - 29)) | (1 << (StlParser.DomainTypeInt - 29)) | (1 << (StlParser.Identifier - 29)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IoTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.IoTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Input(self):
            return self.getToken(StlParser.Input, 0)

        def Output(self):
            return self.getToken(StlParser.Output, 0)

        def getRuleIndex(self):
            return StlParser.RULE_ioType

        def accept(self, visitor):
            if hasattr(visitor, "visitIoType"):
                return visitor.visitIoType(self)
            else:
                return visitor.visitChildren(self)




    def ioType(self):

        localctx = StlParser.IoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ioType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==StlParser.Input or _la==StlParser.Output):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntervalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.IntervalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(StlParser.LBRACK, 0)

        def intervalTime(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlParser.IntervalTimeContext)
            else:
                return self.getTypedRuleContext(StlParser.IntervalTimeContext,i)


        def COLON(self):
            return self.getToken(StlParser.COLON, 0)

        def RBRACK(self):
            return self.getToken(StlParser.RBRACK, 0)

        def getRuleIndex(self):
            return StlParser.RULE_interval

        def accept(self, visitor):
            if hasattr(visitor, "visitInterval"):
                return visitor.visitInterval(self)
            else:
                return visitor.visitChildren(self)




    def interval(self):

        localctx = StlParser.IntervalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_interval)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(StlParser.LBRACK)
            self.state = 109
            self.intervalTime()
            self.state = 110
            self.match(StlParser.COLON)
            self.state = 111
            self.intervalTime()
            self.state = 112
            self.match(StlParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntervalTimeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.IntervalTimeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_intervalTime

     
        def copyFrom(self, ctx):
            super(StlParser.IntervalTimeContext, self).copyFrom(ctx)



    class IntervalTimeLiteralContext(IntervalTimeContext):

        def __init__(self, parser, ctx): # actually a StlParser.IntervalTimeContext)
            super(StlParser.IntervalTimeLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(StlParser.LiteralContext,0)

        def unit(self):
            return self.getTypedRuleContext(StlParser.UnitContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitIntervalTimeLiteral"):
                return visitor.visitIntervalTimeLiteral(self)
            else:
                return visitor.visitChildren(self)



    def intervalTime(self):

        localctx = StlParser.IntervalTimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_intervalTime)
        self._la = 0 # Token type
        try:
            localctx = StlParser.IntervalTimeLiteralContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.literal()
            self.state = 116
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StlParser.SEC) | (1 << StlParser.MSEC) | (1 << StlParser.USEC) | (1 << StlParser.NSEC) | (1 << StlParser.PSEC))) != 0):
                self.state = 115
                self.unit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.UnitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SEC(self):
            return self.getToken(StlParser.SEC, 0)

        def MSEC(self):
            return self.getToken(StlParser.MSEC, 0)

        def USEC(self):
            return self.getToken(StlParser.USEC, 0)

        def NSEC(self):
            return self.getToken(StlParser.NSEC, 0)

        def PSEC(self):
            return self.getToken(StlParser.PSEC, 0)

        def getRuleIndex(self):
            return StlParser.RULE_unit

        def accept(self, visitor):
            if hasattr(visitor, "visitUnit"):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = StlParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << StlParser.SEC) | (1 << StlParser.MSEC) | (1 << StlParser.USEC) | (1 << StlParser.NSEC) | (1 << StlParser.PSEC))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlParser.TopExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlParser.RULE_topExpression

     
        def copyFrom(self, ctx):
            super(StlParser.TopExpressionContext, self).copyFrom(ctx)


